Update navigation links and create index.html; remove project1.html

--- a/ABOUT_US.HTML
+++ b/ABOUT_US.HTML
@@ -43,7 +43,7 @@
   </style>
 
     <body>
-        <a href="../PAGES/webpage_demo.html">HOME</a>
+        <a href="../PAGES/index.html">HOME</a>
 
         <div class="w3-container w3-blue w3-cursive w3-animate-opacity">
             <h1 style="text-align: center;">ABOUT-US</h1>
