--- a/STAY.HTML
+++ b/STAY.HTML
@@ -12,7 +12,7 @@
         </style>
 
     <body>
-      <a href="C:\Users\Dell\New folder\webpage_demo.html">HOME</a> 
+      <a href="C:\Users\Dell\New folder\index.html">HOME</a> 
 
       <div class= "w3-container">
     <div class="w3-card-4"  style="width:80%";>
