--- a/SCHEDULE.HTML
+++ b/SCHEDULE.HTML
@@ -44,7 +44,7 @@
     
     <body>
 
-<a href="../PAGES/webpage_demo.html" rel="webpage_demo.html">HOME</a>
+<a href="../PAGES/index.html" rel="webpage_demo.html">HOME</a>
 
        
 
