--- a/ckyllp.html
+++ b/ckyllp.html
@@ -48,7 +48,7 @@
    
     <body>
 
-      <a href="../PAGES/webpage_demo.html" rel="webpage_demo.html">HOME</a>
+      <a href="../PAGES/index.html" rel="webpage_demo.html">HOME</a>
 
     <div class="w3-container w3-teal">
         <div class="w3-center w3-animate-opacity">
