--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <div class="w3-top">
             <div class="tm-menu">
                 <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-               <a href="../PAGES/ABOUT_US.HTML">ABOUT US</a>    ||   <a href="../PAGES/ckyllp.html" >POOJA</a>
-                <a href="../PAGES/STAY.HTML">STAY</a>
-                <a href="../PAGES/SCHEDULE.HTML">SCHEDULES</a>
+               <a href="../PAGES/about_us.html">ABOUT US</a>    ||   <a href="../PAGES/ckyllp.html" >POOJA</a>
+                <a href="../PAGES/stay.html">STAY</a>
+                <a href="../PAGES/schedule.html">SCHEDULES</a>
                 <div class="templatemo_clear"></div>
 
             </div>
