--- a/schedule.html
+++ b/schedule.html
@@ -44,7 +44,7 @@
     
     <body>
 
-<a href="../PAGES/index.html" rel="webpage_demo.html">HOME</a>
+<a href="../PAGES/index.html">HOME</a>
 
        
 
