--- a/ckyllp.html
+++ b/ckyllp.html
@@ -3,8 +3,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet"   href="https://www.w3schools.com/w3css/5/w3.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <style>
 * {
@@ -48,7 +46,7 @@
    
     <body>
 
-      <a href="../PAGES/index.html" rel="webpage_demo.html">HOME</a>
+      <a href="../PAGES/index.html">HOME</a>
 
     <div class="w3-container w3-teal">
         <div class="w3-center w3-animate-opacity">
